--- a/config.json
+++ b/config.json
@@ -1,5 +1,8 @@
 {
   "openRoles": [
-    {"name": "", "id": ""}
+    {"name": "3D Artist", "id": "480973305499615233"},
+    {"name": "Frontend", "id": "687930511611527211"},
+    {"name": "Backend", "id": "809090989229998112"},
+    {"name": "Fullstack", "id": "816208147357499402"}
   ]
 }
