--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+  "unverifyRole": "827531916064325702",
   "openRoles": [
     {"name": "3D Artist", "id": "480973305499615233"},
     {"name": "Frontend", "id": "687930511611527211"},
